elucid/elucid-language/src/semantic/snapshots/elucid_language__semantic__pipeline__tests__aggregate_pipeline.snap
---
source: elucid-language/src/semantic/pipeline.rs
expression: pipeline
---
Pipeline {
    source: SourceSpec {
        dataset: "test",
    },
    time_range: TimeRange {
        earliest: None,
        latest: None,
    },
    stages: [
        Aggregate {
            measures: [
                AggregateExpr {
                    function: "sum",
                    argument: Some(
                        Field(
                            FieldRef {
                                name: "bytes",
                            },
                        ),
                    ),
                    alias: Some(
                        "total",
                    ),
                },
                AggregateExpr {
                    function: "count",
                    argument: None,
                    alias: None,
                },
            ],
            group_by: [
                FieldRef {
                    name: "method",
                },
            ],
        },
    ],
}
