elucid/elucid-language/src/semantic/snapshots/elucid_language__semantic__pipeline__tests__analyze_error_aggregate_after_aggregate.snap
---
source: elucid-language/src/semantic/pipeline.rs
expression: err.to_string()
---
only 'sort' and 'limit' commands may follow an aggregate ('stats') command
