elucid/elucid-language/src/semantic/snapshots/elucid_language__semantic__pipeline__tests__analyze_error_invalid_limit.snap
---
source: elucid-language/src/semantic/pipeline.rs
expression: err.to_string()
---
limit value must be a positive integer, got 0
