elucid/elucid-language/src/semantic/snapshots/elucid_language__semantic__pipeline__tests__analyze_error_multiple_aggregates.snap
---
source: elucid-language/src/semantic/pipeline.rs
expression: err.to_string()
---
pipeline must not contain more than one 'stats' command
