elucid/elucid-language/src/semantic/snapshots/elucid_language__semantic__pipeline__tests__analyze_filter.snap
---
source: elucid-language/src/semantic/pipeline.rs
expression: pipeline
---
Pipeline {
    source: SourceSpec {
        dataset: "test",
    },
    time_range: TimeRange {
        earliest: None,
        latest: None,
    },
    stages: [
        Filter(
            Binary(
                Equal,
                Field(
                    FieldRef {
                        name: "status",
                    },
                ),
                Literal(
                    Number(
                        200.0,
                    ),
                ),
            ),
        ),
    ],
}
