elucid/elucid-language/src/semantic/snapshots/elucid_language__semantic__pipeline__tests__analyze_multiple_filters.snap
---
source: elucid-language/src/semantic/pipeline.rs
expression: pipeline
---
Pipeline {
    source: SourceSpec {
        dataset: "test",
    },
    time_range: TimeRange {
        earliest: None,
        latest: None,
    },
    stages: [
        Filter(
            Binary(
                GreaterThan,
                Field(
                    IrFieldRef {
                        name: "a",
                    },
                ),
                Literal(
                    Number(
                        1.0,
                    ),
                ),
            ),
        ),
        Filter(
            Binary(
                LessThan,
                Field(
                    IrFieldRef {
                        name: "b",
                    },
                ),
                Literal(
                    Number(
                        2.0,
                    ),
                ),
            ),
        ),
        Sort(
            [
                SortSpec {
                    expr: Field(
                        IrFieldRef {
                            name: "a",
                        },
                    ),
                    descending: false,
                },
            ],
        ),
    ],
}
