elucid/elucid-language/src/semantic/snapshots/elucid_language__semantic__pipeline__tests__analyze_source_only.snap
---
source: elucid-language/src/semantic/pipeline.rs
expression: pipeline
---
Pipeline {
    source: SourceSpec {
        dataset: "test",
    },
    time_range: TimeRange {
        earliest: None,
        latest: None,
    },
    stages: [],
}
