elucid/elucid-language/src/semantic/snapshots/elucid_language__semantic__pipeline__tests__canonical_aggregate_sort_take_ir.snap
---
source: elucid-language/src/semantic/pipeline.rs
expression: pipeline
---
Pipeline {
    source: SourceSpec {
        dataset: "logs",
    },
    time_range: TimeRange {
        earliest: None,
        latest: None,
    },
    stages: [
        Aggregate {
            measures: [
                AggregateExpr {
                    function: "count",
                    argument: None,
                    alias: Some(
                        "event_count",
                    ),
                },
                AggregateExpr {
                    function: "sum",
                    argument: Some(
                        Field(
                            FieldRef {
                                name: "status",
                            },
                        ),
                    ),
                    alias: Some(
                        "total",
                    ),
                },
            ],
            group_by: [
                FieldRef {
                    name: "source",
                },
            ],
        },
        Sort(
            [
                SortSpec {
                    expr: Field(
                        FieldRef {
                            name: "event_count",
                        },
                    ),
                    order: Descending,
                },
            ],
        ),
        Limit(
            10,
        ),
    ],
}
